--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,95 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>portfolio</title>
+	<link rel="stylesheet" type="text/css" href="../css/defalt.css">
+	<link rel="stylesheet" type="text/css" href="../css/reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div id="header_container">
+		<div class="header_inner">
+			<nav class="gnbWrap">
+				<ul>
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">PROFILE</a></li>
+					<li><a href="#">PROJECT</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
+
+	<div id="body_container">
+		<div class="mainImg"><img src="../images/main.jpg"></div>
+		<section class="profile">
+			<h2 class="sectionTit">PROFILE</h2>
+			<div class="profileWrap">
+				<img src="../images/profile_img.png" alt="profile image">
+				<div class="info">
+					<p class="name"><span>김은서,</span> Kim Eunseo</p>
+					<p class="job">Designer, Publisher</p>
+					<ul class="profileList">
+						<li>Birthday</li>
+						<li>2001.12.30</li>
+						<li>E-mail</li>
+						<li>violeta523@naver.com</li>
+						<li>Github</li>
+						<li>https://github.com/swest30</li>
+						<li>SNS</li>
+						<li class="snsIco"><a href="https://www.instagram.com/s.west_12/"><img src="../images/sns01.png"></a></li>
+						<li class="snsIco snsIco02"><a href="https://www.facebook.com/profile.php?id=100014079433748"></a><img src="../images/sns02.png"></a></li>
+					</ul>
+				</div>
+			</div>
+		</section>
+		<section class="project">
+			<h2 class="sectionTit">PROJECT</h2>
+			<ul class="projectList">
+				<li class="item01">
+					<a href="#">
+					<img src="../images/thumb01.png">
+					<div class="contBox">Web Design</div>
+					</a>
+				</li>
+				<li class="item01">
+					<a href="#">
+						<img src="../images/thumb02.png">
+						<div class="contBox">Web Design</div>
+					</a>
+				</li>
+				<li class="item02">
+					<a href="#">
+						<img src="../images/thumb03.png">
+						<div class="contBox02">UIUX Design</div>
+					</a>
+				</li>
+				<li class="item02">
+					<a href="#">
+						<img src="../images/thumb04.png">
+						<div class="contBox02">UIUX Design</div>
+					</a>
+				</li>
+				<li class="item02">
+					<a href="#">
+						<img src="../images/thumb05.png">
+						<div class="contBox02">UIUX Design</div>
+					</a>
+				</li>
+				<li class="item02">
+					<a href="#">
+						<img src="../images/thmb06.png">
+						<div class="contBox02">UIUX Design</div>
+					</a>
+				</li>
+				<li class="item02">
+					<a href="#">
+						<img src="../images/thumb07.png">
+						<div class="contBox02">UIUX Design</div>
+					</a>
+				</li>
+			</ul>
+		</section>
+	</div>
 </body>
 </html>
