--- a/html/index.html
+++ b/html/index.html
@@ -6,15 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="../css/defalt.css">
 	<link rel="stylesheet" type="text/css" href="../css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Raleway&display=swap" rel="stylesheet">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="../js/defalt.js"></script>
 </head>
 <body>
 	<div id="header_container">
 		<div class="header_inner">
 			<nav class="gnbWrap">
 				<ul>
-					<li><a href="#">HOME</a></li>
-					<li><a href="#">PROFILE</a></li>
-					<li><a href="#">PROJECT</a></li>
+					<li class="nav1"><a href="index.html">HOME</a></li>
+					<li class="nav2"><a href="index.html">PROFILE</a></li>
+					<li class="nav3"><a href="index.html">PROJECT</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -38,7 +40,7 @@
 						<li>https://github.com/swest30</li>
 						<li>SNS</li>
 						<li class="snsIco"><a href="https://www.instagram.com/s.west_12/"><img src="../images/sns01.png"></a></li>
-						<li class="snsIco snsIco02"><a href="https://www.facebook.com/profile.php?id=100014079433748"></a><img src="../images/sns02.png"></a></li>
+						<li class="snsIco snsIco02"><a href="https://www.facebook.com/profile.php?id=100014079433748"><img src="../images/sns02.png"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -56,6 +58,12 @@
 					<a href="#">
 						<img src="../images/thumb02.png">
 						<div class="contBox">Web Design</div>
+					</a>
+				</li>
+				<li class="item02">
+					<a href="https://drive.google.com/open?id=1FuwX5j8-KZCnBepqnsx4aaRuf21y4ywK" target="_blank">
+						<img src="../images/thumb08.png">
+						<div class="contBox02">2019 It is IT</div>
 					</a>
 				</li>
 				<li class="item02">
@@ -90,6 +98,10 @@
 				</li>
 			</ul>
 		</section>
+	</div>
+
+	<div id="footer_container">
+		<p>Copyright ⓒ 2019. Kim Eunseo. All right reserved.</p>
 	</div>
 </body>
 </html>
