--- a/html/index.html
+++ b/html/index.html
@@ -10,20 +10,20 @@
 	<script type="text/javascript" src="../js/defalt.js"></script>
 </head>
 <body>
-	<div id="header_container">
+	<header id="header_container">
 		<div class="header_inner">
 			<nav class="gnbWrap">
 				<ul>
-					<li class="nav1"><a href="index.html">HOME</a></li>
-					<li class="nav2"><a href="index.html">PROFILE</a></li>
-					<li class="nav3"><a href="index.html">PROJECT</a></li>
+					<li class="nav1"><a href="#">HOME</a></li>
+					<li class="nav2"><a href="#">PROFILE</a></li>
+					<li class="nav3"><a href="#">PROJECT</a></li>
 				</ul>
 			</nav>
 		</div>
-	</div>
+	</header>
 
 	<div id="body_container">
-		<div class="mainImg"><img src="../images/main.jpg"></div>
+		<section class="mainpage">main</section>
 		<section class="profile">
 			<h2 class="sectionTit">PROFILE</h2>
 			<div class="profileWrap">
@@ -32,17 +32,27 @@
 					<p class="name"><span>김은서,</span> Kim Eunseo</p>
 					<p class="job">Designer, Publisher</p>
 					<ul class="profileList">
-						<li>Birthday</li>
+						<li><strong>Birthday</strong></li>
 						<li>2001.12.30</li>
-						<li>E-mail</li>
+						<li><strong>E-mail</strong></li>
 						<li>violeta523@naver.com</li>
-						<li>Github</li>
-						<li>https://github.com/swest30</li>
-						<li>SNS</li>
-						<li class="snsIco"><a href="https://www.instagram.com/s.west_12/"><img src="../images/sns01.png"></a></li>
-						<li class="snsIco snsIco02"><a href="https://www.facebook.com/profile.php?id=100014079433748"><img src="../images/sns02.png"></a></li>
+						<li><strong>Github</strong></li>
+						<li><a href="https://github.com/swest30" target="_blank">https://github.com/swest30</a></li>
+						<li><strong>SNS</strong></li>
+						<li class="snsIco"><a href="https://www.instagram.com/s.west_12/" target="_blank"><img src="../images/sns01.png"></a></li>
+						<li class="snsIco snsIco02"><a href="https://www.facebook.com/profile.php?id=100014079433748" target="_blank"><img src="../images/sns02.png"></a></li>
 					</ul>
 				</div>
+			</div>
+			<div class="skills">
+				<h5 class="skillListTit">Skills</h5>
+				<ul class="skillList">
+					<li class="skill"><img src="../images/skill01.png" alt="photoshop"><p>Photoshop</p></li>
+					<li class="skill"><img src="../images/skill02.png" alt="illustrator"><p>Illustrator</p></li>
+					<li class="skill"><img src="../images/skill03.png" alt="after effect"><p>After Effect</p></li>
+					<li class="skill"><img src="../images/skill04.png" alt="3ds max"><p>3Ds Max</p></li>
+					<li class="skill"><img src="../images/skill05.png" alt="html5/css3"><p>html5 / CSS3</p></li>
+				</ul>
 			</div>
 		</section>
 		<section class="project">
@@ -100,8 +110,8 @@
 		</section>
 	</div>
 
-	<div id="footer_container">
+	<footer id="footer_container">
 		<p>Copyright ⓒ 2019. Kim Eunseo. All right reserved.</p>
-	</div>
+	</footer>
 </body>
 </html>
